[package]
name = "leancrypto"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Mueller <smueller@chronox.de>"]
description = "Cryptographic library with stack-only support and PQC-safe algorithms"
license = "BSD3"
repository = "https://github.com/smuellerDD/leancrypto"
readme = "README.md"
keywords = ["leancrypto", "PQC", "cryptography", "c", "bindings"]
categories = ["development-tools", "external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.1", features = ["experimental"] }
